--- a/css/style.css
+++ b/css/style.css
@@ -28,8 +28,10 @@ article section {
   clear: both;
   overflow: auto;
   box-sizing: border-box; }
+  article section h2 {
+    color: #946513; }
 
-article section#selling-points {
+article section #selling-points {
   flex-grow: 2;
   flex-basis: 100%; }
 
@@ -57,7 +59,6 @@ article code.after {
   width: 40%; }
 
 h1,
-h2,
 h6 {
   color: #6b8eff; }
 
