--- a/scss/style.scss
+++ b/scss/style.scss
@@ -52,9 +52,12 @@ article section {
   clear: both;
   overflow: auto;
   box-sizing: border-box;
+  h2 {
+    color: rgb(148, 101, 19);
+  }
 }
 
-article section#selling-points {
+article section #selling-points {
   flex-grow: 2;
   flex-basis: 100%;
 }
@@ -86,7 +89,6 @@ article code.after {
 }
 
 h1,
-h2,
 h6 {
   color: #6b8eff;
 }
