--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body {
   font: 100% "Space Mono", monospace;
   color: #2748b3;
   margin: 0px;
-  padding: 30px;
+  padding: 48;
   background-color: #000;
   background-image: radial-gradient(#fff, rgba(255, 255, 255, 0.2) 2px, transparent 40px), radial-gradient(#fff, rgba(255, 255, 255, 0.15) 1px, transparent 30px), radial-gradient(#fff, rgba(255, 255, 255, 0.1) 2px, transparent 40px), radial-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.1) 2px, transparent 30px);
   background-size: 550px 550px, 350px 350px, 250px 250px, 150px 150px;
@@ -31,9 +31,13 @@ article section {
   article section h2 {
     color: #946513; }
 
-article section #selling-points {
+article section#selling-points {
   flex-grow: 2;
   flex-basis: 100%; }
+  article section#selling-points h2 {
+    color: #fff; }
+  article section#selling-points li {
+    color: red; }
 
 article code {
   background: #000;
