--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,16 @@ section {
   -moz-box-shadow: 10px 10px 19px -4px rgba(255, 255, 255, 0.75);
   box-shadow: 10px 10px 19px -4px rgba(255, 255, 255, 0.75); }
 
+.message, .success, .error, .warning {
+  border: 1px solid #ccc;
+  padding: 10px;
+  color: #2748b3;
+  background-color: #000;
+  width: 100%; }
+
+* {
+  padding: 8px; }
+
 body {
   font: 100% "Space Mono", monospace;
   color: #2748b3;
