--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 /** @format */
 // Variables
-
+$generalPadding: 8px;
 // Mixins
 
 @mixin box-shadow {
@@ -11,6 +11,18 @@
 
 section {
   @include box-shadow;
+}
+
+%message-shared {
+  border: 1px solid #ccc;
+  padding: 10px;
+  color: #2748b3;
+  background-color: #000;
+  width: 100%;
+}
+
+* {
+  padding: $generalPadding;
 }
 
 body {
@@ -120,17 +132,21 @@ h6 {
   width: 100%;
 }
 
+.message {
+  @extend %message-shared;
+}
+
 .success {
-  @extend .success;
+  @extend %message-shared;
   background-color: green;
 }
 
 .error {
-  @extend .error;
+  @extend %message-shared;
   background-color: red;
 }
 
 .warning {
-  @extend .warning;
+  @extend %message-shared;
   background-color: orange;
 }
